b=379436, borders on elements > 2^15px drawn backwards, r=dbaron